Fix Modal close button is too small #557

--- a/src/assets/sass/protocol/components/_modal.scss
+++ b/src/assets/sass/protocol/components/_modal.scss
@@ -81,7 +81,7 @@ html.mzp-is-noscroll {
     .mzp-c-modal-button-close {
         @include image-replaced;
         background: transparent url('#{$image-path}/icons/close-white.svg') center center no-repeat;
-        @include background-size(16px 16px);
+        @include background-size(20px 20px);
         border: none;
         height: 42px;
         min-width: 0;
